--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
 				cursor: pointer;
 			}
 
+			.cat-image, .cat-counter {
+				text-align:center;
+				padding: 10px;
+
+			}
+
+			.cat-image img {
+				max-width: 50%;	
+			}
+
 		</style>
 	</head>
 
