Begin Premium Pro exercise. Add Html for admin area

--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
 		<div id="cat-selected-container">
 		</div>
 
+		<div id="cat-admin-container">
+			<input type="button" value="Admin" name="admin-button" id="admin-button">
+			<div id="cat-admin-form">
+				<label for="cat-name">
+					Name:
+					<input type="text" value="" name="cat-name" id="cat-name">
+				</label>
+				<label for="cat-img">
+					Image URL:
+					<input type="text" value="" name="cat-img" id="cat-img">
+				</label>
+				<label for="cat-clicked">
+					Click counter:
+					<input type="text" value="" name="cat-clicked" id="cat-clicked">
+				</label>
+			</div>
+		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 		<script async src="js/cat-clicker.js"></script>
