Add admin button that displays selected cat details in admin input fields

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 					Image URL:
 					<input type="text" value="" name="cat-img" id="cat-img">
 				</label>
-				<label for="cat-clicked">
+				<label for="cat-counter">
 					Click counter:
-					<input type="text" value="" name="cat-clicked" id="cat-clicked">
+					<input type="text" value="" name="cat-counter" id="cat-counter">
 				</label>
 			</div>
 		</div>
