Implement cancel button

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 					Click counter:
 					<input type="text" value="" name="cat-counter" id="cat-counter">
 				</label>
+				<input type="button" value="Cancel" name="cancel-button" id="cancel-button">
+				<input type="button" value="Save" name="save-button" id="save-button">
 			</div>
 		</div>
 
